# ai_advisor

./: requirements.txt
.devcontainer/: devcontainer.json
ai_advisor/: .gitignore  README.md  app.py  crew.py  example_usage.py  fix.txt  main.py  portfolio_recommendation.md  pyproject.toml  report.md  run_advisor.py  stocks.py  streamlit_app.py
ai_advisor/config/: agents.yaml  tasks.yaml
ai_advisor/data/: price_cache.parquet
ai_advisor/src/ai_advisor/: app.py  crew.py  example_usage.py  main.py  market_data.py  optimizer.py  portfolio_recommendation.md  price_cache.py  run_advisor.py  stocks.py
ai_advisor/src/ai_advisor/config/: agents.yaml  tasks.yaml
