[project]
name = "ai_advisor"
version = "0.1.0"
description = "ai_advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
ai_advisor = "ai_advisor.main:run"
run_crew = "ai_advisor.main:run"
train = "ai_advisor.main:train"
replay = "ai_advisor.main:replay"
test = "ai_advisor.main:test"
run_with_trigger = "ai_advisor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
